force-app/main/default/objects/Product_Price__c/fields/Available_For_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Account_Tier__c</fullName>
    <label>Available For Account Tier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>