force-app/main/default/objects/Product_Price__c/fields/Minimum_Price_Currency__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Price_Currency__c</fullName>
    <label>Minimum Price Currency</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>