force-app/main/default/objects/Product_Price__c/fields/Price_Currency__c.field-meta.xml
<CustomField>
    <fullName>Price_Currency__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>