force-app/main/default/objects/Product_Price__c/fields/Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Price_Formula__c</fullName>
    <formula>IF(RecordType.Name = &#39;Percent&#39;, 
			IF((Price_Percent__c*100) &gt; 1, TEXT(Price_Percent__c*100), &#39;0&#39;&amp;TEXT(Price_Percent__c*100))
			&amp;&#39; %&#39; ,
			TEXT(CurrencyIsoCode) &amp;&quot; &quot;&amp; IF(Price_Currency__c &gt; 1,
																																		IF( 
																																						Price_Currency__c &gt;= 1000000, 
																																						TEXT(FLOOR(Price_Currency__c / 1000000)) &amp; &quot;,&quot;, 
																																						&quot;&quot;) &amp; 
																																		IF( 
																																						Price_Currency__c &gt;= 1000, 
																																						RIGHT(TEXT(FLOOR(Price_Currency__c / 1000)), 3) &amp; &quot;,&quot;, 
																																						&quot;&quot;) &amp; 
																																		RIGHT(TEXT(FLOOR(Price_Currency__c)), 3) &amp; &quot;.&quot; &amp; 
																																		IF( 
																																						MOD(Price_Currency__c , 1) * 100 &lt; 10, 
																																						&quot;0&quot; &amp; TEXT(ROUND(MOD(Price_Currency__c , 1), 2) * 100), 
																																						TEXT(MIN(ROUND(MOD(Price_Currency__c , 1), 2) * 100, 99)) 
																																		),
																																		&#39;0&#39;&amp;TEXT(Price_Currency__c)
																																	)																																											
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price</label>
    <type>Text</type>
</CustomField>