force-app/main/default/objects/Product_Price__c/fields/Text_Price__c.field-meta.xml
<CustomField>
    <fullName>Text_Price__c</fullName>
    <label>Text Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>