force-app/main/default/objects/Product_Price__c/recordTypes/Currency.recordType-meta.xml
<RecordType>
    <fullName>Currency</fullName>
    <active>true</active>
    <label>Currency</label>
</RecordType>