force-app/main/default/objects/Product_Price__c/recordTypes/Percent.recordType-meta.xml
<RecordType>
    <fullName>Percent</fullName>
    <active>true</active>
    <label>Percent</label>
</RecordType>